feat: Add user registration and login by username
