# src/api/routers/users.go
@@ -10,4 +10,6 @@ import (
 func Users(router *gin.RouterGroup, cfg *config.Config) {
 	h := handlers.NewUsersHandler(cfg)
 	router.POST("/send-otp", middlewares.OtpLimiter(cfg), h.SendOtp)
+	router.POST("/register-by-username", h.RegisterByUserName)
+	router.POST("/login-by-username", h.LoginByUserName)
 }
